src/test-c/test_fail/error/defined_var.c
int main(){
    int a;
    a = 2;
    int a;
    return a-2;
}